set(plasmanetworkmanagement_libeditor_SRCS
    ipv4widget.cpp
    ui/advancedpermissionswidget.cpp
    ui/delegate.cpp
    ui/ipv4delegate.cpp
    ui/ipv4routeswidget.cpp
    ui/simpleipv4addressvalidator.cpp
    ui/intdelegate.cpp
    ipv6widget.cpp
    ui/ipv6routeswidget.cpp
    ui/ipv6delegate.cpp
    ui/simpleipv6addressvalidator.cpp
    security802-1x.cpp
    wiredconnectionwidget.cpp
    wiredsecurity.cpp
    wificonnectionwidget.cpp
    wifisecurity.cpp
    pppwidget.cpp
    pppoewidget.cpp
    gsmwidget.cpp
    cdmawidget.cpp
    btwidget.cpp
    infinibandwidget.cpp
    vlanwidget.cpp
    wimaxwidget.cpp
    bondwidget.cpp
    bridgewidget.cpp
    connectiondetaileditor.cpp
    connectionwidget.cpp
)

qt5_wrap_ui(plasmanetworkmanagement_libeditor_SRCS
    ui/advancedpermissionswidget.ui
    ui/ipv4.ui
    ui/ipv4routes.ui
    ui/ipv6.ui
    ui/ipv6routes.ui
    ui/802-1x.ui
    ui/wiredconnectionwidget.ui
    ui/wiredsecurity.ui
    ui/wificonnectionwidget.ui
    ui/wifisecurity.ui
    ui/ppp.ui
    ui/pppoe.ui
    ui/gsm.ui
    ui/cdma.ui
    ui/bt.ui
    ui/infiniband.ui
    ui/vlan.ui
    ui/wimax.ui
    ui/bond.ui
    ui/bridge.ui
    ui/connectiondetaileditor.ui
    ui/connectionwidget.ui
)

add_library(plasmanetworkmanagement-editor SHARED ${plasmanetworkmanagement_libeditor_SRCS})
target_link_libraries(plasmanetworkmanagement-editor
    ${QT_QTWIDGETS_LIBRARY}
    Qt5::Xml
    Qt5::Network
    Qt5::DBus
    ${NETWORKMANAGERQT_LDFLAGS}
    ${MODEMMANAGERQT_LDFLAGS}
    KF5::KService
    KF5::KI18n
    KF5::KIOWidgets
    KF5::KDE4Support
    plasmanetworkmanagement-internal
)

install(TARGETS plasmanetworkmanagement-editor ${INSTALL_TARGETS_DEFAULT_ARGS})
